--- a/assets/styles/scss/numbers.scss
+++ b/assets/styles/scss/numbers.scss
@@ -1,6 +1,5 @@
 .numbers {
     position: relative;
-    width: 100vw;
     height: 455px;
     margin: 0 auto;
     background: linear-gradient(180deg, #D9F0FF 7.29%, #BFEBE3 100%);
